--- a/.github/workflows/gradson.yml
+++ b/.github/workflows/gradson.yml
@@ -48,17 +48,17 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  publish-job:
-    runs-on: ubuntu-latest
-    needs: sonarqube
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: build/libs
+ # publish-job:
+  #  runs-on: ubuntu-latest
+   # needs: sonarqube
+    #steps:
+     # - uses: actions/checkout@v4
+      #- uses: actions/setup-java@v3
+       # with:
+        #  java-version: '17'
+         # distribution: 'temurin'
+      #- uses: actions/upload-artifact@v3
+       # with:
+        #  name: Package
+         # path: build/libs
 
